R4AMD/Bindings/C/r4amd.h

typedef struct R4AmdInfo {
    uint32_t version;
    uint32_t size;
    uint32_t mesa_major;
    uint32_t mesa_minor;
    uint32_t mesa_patch;
    uint32_t implementation_stage;
    uint32_t capability_flags;
    uint32_t reserved;
} R4AmdInfo;
typedef struct R4AmdDriverProfile {
    uint32_t version;
    uint32_t size;
    uint32_t vendor_id;
    uint32_t device_id;
    uint32_t gc_version;
    uint32_t sdma_version;
    uint32_t command_abi;
    uint32_t reserved;
} R4AmdDriverProfile;
typedef struct R4AmdDeviceProfile {
    uint32_t version;
    uint32_t size;
    uint32_t vendor_id;
    uint32_t device_id;
    uint32_t gc_version;
    uint32_t sdma_version;
    uint32_t command_abi;
    uint32_t flags;
    uint32_t adapter_id;
    uint32_t reserved;
    uint64_t device_generation;
    uint64_t reset_generation;
} R4AmdDeviceProfile;
typedef struct R4AmdFeatures {
    uint32_t version;
    uint32_t size;
    uint32_t command_abi;
    uint32_t features;
    uint32_t gpu_address_bits;
    uint32_t max_command_words;
    uint32_t reserved0;
    uint32_t reserved1;
} R4AmdFeatures;
typedef struct R4AmdCopy {
    uint32_t version;
    uint32_t size;
    uint64_t source;
    uint64_t target;
    uint64_t byte_length;
    uint64_t source_pitch;
    uint64_t target_pitch;
    uint64_t source_modifier;
    uint64_t target_modifier;
    uint32_t row_count;
    uint32_t reserved;
} R4AmdCopy;
typedef struct R4AmdFill {
    uint32_t version;
    uint32_t size;
    uint64_t target;
    uint64_t byte_length;
    uint32_t value;
    uint32_t reserved;
} R4AmdFill;
typedef struct R4AmdPm4Frame {
    uint32_t version;
    uint32_t size;
    uint32_t engine;
    uint32_t flags;
    uint64_t indirect_address;
    uint64_t fence_address;
    uint64_t eop_scratch;
    uint64_t fence_sequence;
    uint32_t command_dwords;
    uint32_t reserved0;
    uint64_t reserved1;
} R4AmdPm4Frame;
typedef struct R4AmdImageRequest {
    uint32_t version;
    uint32_t size;
    uint32_t gb_addr_config;
    uint32_t chip_revision;
    uint32_t device_id;
    uint32_t gc_version;
    uint32_t resource_type;
    uint32_t format;
    uint32_t width;
    uint32_t height;
    uint32_t depth;
    uint32_t mip_count;
    uint32_t samples;
    uint32_t usage;
    uint32_t swizzle;
    uint32_t pipe_xor;
    uint32_t pitch;
    uint32_t reserved;
    uint64_t modifier;
} R4AmdImageRequest;
typedef struct R4AmdImageLayout {
    uint32_t version;
    uint32_t size;
    uint64_t byte_length;
    uint64_t slice_bytes;
    uint64_t alignment;
    uint64_t modifier;
    uint32_t pitch;
    uint32_t height;
    uint32_t depth;
    uint32_t epitch;
    uint32_t block_width;
    uint32_t block_height;
    uint32_t block_depth;
    uint32_t first_mip_tail;
    uint32_t mip_count;
    uint32_t pixel_bits;
    uint32_t element_bits;
    uint32_t resource_type;
    uint32_t swizzle;
    uint32_t flags;
    uint32_t gb_addr_config;
    uint32_t reserved;
} R4AmdImageLayout;
typedef struct R4AmdMip {
    uint32_t pitch;
    uint32_t height;
    uint32_t depth;
    uint32_t pixel_pitch;
    uint32_t pixel_height;
    uint32_t equation_index;
    uint64_t offset;
    uint64_t macro_offset;
    uint32_t tail_offset;
    uint32_t tail_x;
    uint32_t tail_y;
    uint32_t tail_z;
    uint64_t reserved;
} R4AmdMip;
typedef struct R4AmdCoordinate {
    uint32_t version;
    uint32_t size;
    uint32_t x;
    uint32_t y;
    uint32_t slice;
    uint32_t sample;
    uint32_t mip;
    uint32_t reserved;
} R4AmdCoordinate;
typedef struct R4AmdImageAddress {
    uint32_t version;
    uint32_t size;
    uint64_t offset;
    uint32_t bit_position;
    uint32_t prt_block;
} R4AmdImageAddress;
typedef struct R4AmdMetadata {
    uint32_t version;
    uint32_t size;
    uint32_t kind;
    uint32_t flags;
    uint64_t byte_length;
    uint64_t alignment;
    uint64_t slice_bytes;
    uint32_t block_width;
    uint32_t block_height;
    uint32_t block_depth;
    uint32_t compress_width;
    uint32_t compress_height;
    uint32_t compress_depth;
    uint64_t fast_clear_bytes;
} R4AmdMetadata;
typedef struct R4AmdImageImport {
    uint32_t version;
    uint32_t size;
    uint64_t byte_length;
    uint64_t alignment;
    uint64_t offset;
    uint64_t modifier;
    uint32_t adapter_id;
    uint32_t reserved;
    uint64_t memory_generation;
    uint32_t expected_adapter;
    uint32_t metadata_state;
    uint64_t expected_memory_generation;
    uint32_t pitch;
    uint32_t usage;
} R4AmdImageImport;
typedef struct R4AmdImageView {
    uint32_t version;
    uint32_t size;
    uint64_t address;
    uint64_t byte_length;
    uint64_t offset;
    uint32_t first_layer;
    uint32_t last_layer;
    uint32_t first_mip;
    uint32_t last_mip;
    uint32_t sampler;
    uint32_t min_lod;
    uint32_t max_lod;
    int32_t lod_bias;
    uint32_t wrap_u;
    uint32_t wrap_v;
    uint32_t wrap_w;
    uint32_t compare;
    uint32_t aniso;
    uint32_t border;
    uint32_t flags;
    uint32_t reserved;
} R4AmdImageView;
typedef struct R4AmdImageDescriptors {
    uint32_t version;
    uint32_t size;
    uint32_t texture0;
    uint32_t texture1;
    uint32_t texture2;
    uint32_t texture3;
    uint32_t texture4;
    uint32_t texture5;
    uint32_t texture6;
    uint32_t texture7;
    uint32_t sampler0;
    uint32_t sampler1;
    uint32_t sampler2;
    uint32_t sampler3;
    uint32_t color0;
    uint32_t color1;
    uint32_t color2;
    uint32_t color3;
    uint32_t color4;
    uint32_t color5;
    uint32_t color6;
    uint32_t color7;
    uint32_t color8;
    uint32_t color9;
    uint32_t color10;
    uint32_t color11;
    uint32_t color12;
    uint32_t color13;
    uint32_t color14;
    uint32_t color15;
} R4AmdImageDescriptors;
typedef struct R4AmdArchitecture {
    uint32_t version;
    uint32_t size;
    uint32_t vendor_id;
    uint32_t device_id;
    uint32_t gc_version;
    uint32_t sdma_version;
    uint32_t gb_addr_config;
    uint32_t chip_revision;
    uint64_t bind_alignment;
    uint64_t memory_generation;
    uint32_t flags;
    uint32_t reserved;
    uint64_t max_image_bytes;
} R4AmdArchitecture;