R4AMD/Contract/Generated/implementation_abi.zig

// Generated by R4LContractGen. Do not edit.
const r4os = @import("r4os");

pub const InterfaceHeader = r4os.runtime_r4l.InterfaceHeader;

pub const module_name = "R4AMD";

pub const R4AmdInfo = extern struct {
    version: u32,
    size: u32,
    mesa_major: u32,
    mesa_minor: u32,
    mesa_patch: u32,
    implementation_stage: u32,
    capability_flags: u32,
    reserved: u32,
};

pub const R4AmdDriverProfile = extern struct {
    version: u32,
    size: u32,
    vendor_id: u32,
    device_id: u32,
    gc_version: u32,
    sdma_version: u32,
    command_abi: u32,
    reserved: u32,
};

pub const R4AmdDeviceProfile = extern struct {
    version: u32,
    size: u32,
    vendor_id: u32,
    device_id: u32,
    gc_version: u32,
    sdma_version: u32,
    command_abi: u32,
    flags: u32,
    adapter_id: u32,
    reserved: u32,
    device_generation: u64,
    reset_generation: u64,
};

pub const R4AmdFeatures = extern struct {
    version: u32,
    size: u32,
    command_abi: u32,
    features: u32,
    gpu_address_bits: u32,
    max_command_words: u32,
    reserved0: u32,
    reserved1: u32,
};

pub const R4AmdCopy = extern struct {
    version: u32,
    size: u32,
    source: u64,
    target: u64,
    byte_length: u64,
    source_pitch: u64,
    target_pitch: u64,
    source_modifier: u64,
    target_modifier: u64,
    row_count: u32,
    reserved: u32,
};

pub const R4AmdFill = extern struct {
    version: u32,
    size: u32,
    target: u64,
    byte_length: u64,
    value: u32,
    reserved: u32,
};

pub const R4AmdPm4Frame = extern struct {
    version: u32,
    size: u32,
    engine: u32,
    flags: u32,
    indirect_address: u64,
    fence_address: u64,
    eop_scratch: u64,
    fence_sequence: u64,
    command_dwords: u32,
    reserved0: u32,
    reserved1: u64,
};

pub const R4AmdImageRequest = extern struct {
    version: u32,
    size: u32,
    gb_addr_config: u32,
    chip_revision: u32,
    device_id: u32,
    gc_version: u32,
    resource_type: u32,
    format: u32,
    width: u32,
    height: u32,
    depth: u32,
    mip_count: u32,
    samples: u32,
    usage: u32,
    swizzle: u32,
    pipe_xor: u32,
    pitch: u32,
    reserved: u32,
    modifier: u64,
};

pub const R4AmdImageLayout = extern struct {
    version: u32,
    size: u32,
    byte_length: u64,
    slice_bytes: u64,
    alignment: u64,
    modifier: u64,
    pitch: u32,
    height: u32,
    depth: u32,
    epitch: u32,
    block_width: u32,
    block_height: u32,
    block_depth: u32,
    first_mip_tail: u32,
    mip_count: u32,
    pixel_bits: u32,
    element_bits: u32,
    resource_type: u32,
    swizzle: u32,
    flags: u32,
    gb_addr_config: u32,
    reserved: u32,
};

pub const R4AmdMip = extern struct {
    pitch: u32,
    height: u32,
    depth: u32,
    pixel_pitch: u32,
    pixel_height: u32,
    equation_index: u32,
    offset: u64,
    macro_offset: u64,
    tail_offset: u32,
    tail_x: u32,
    tail_y: u32,
    tail_z: u32,
    reserved: u64,
};

pub const R4AmdCoordinate = extern struct {
    version: u32,
    size: u32,
    x: u32,
    y: u32,
    slice: u32,
    sample: u32,
    mip: u32,
    reserved: u32,
};

pub const R4AmdImageAddress = extern struct {
    version: u32,
    size: u32,
    offset: u64,
    bit_position: u32,
    prt_block: u32,
};

pub const R4AmdMetadata = extern struct {
    version: u32,
    size: u32,
    kind: u32,
    flags: u32,
    byte_length: u64,
    alignment: u64,
    slice_bytes: u64,
    block_width: u32,
    block_height: u32,
    block_depth: u32,
    compress_width: u32,
    compress_height: u32,
    compress_depth: u32,
    fast_clear_bytes: u64,
};

pub const R4AmdImageImport = extern struct {
    version: u32,
    size: u32,
    byte_length: u64,
    alignment: u64,
    offset: u64,
    modifier: u64,
    adapter_id: u32,
    reserved: u32,
    memory_generation: u64,
    expected_adapter: u32,
    metadata_state: u32,
    expected_memory_generation: u64,
    pitch: u32,
    usage: u32,
};

pub const R4AmdImageView = extern struct {
    version: u32,
    size: u32,
    address: u64,
    byte_length: u64,
    offset: u64,
    first_layer: u32,
    last_layer: u32,
    first_mip: u32,
    last_mip: u32,
    sampler: u32,
    min_lod: u32,
    max_lod: u32,
    lod_bias: i32,
    wrap_u: u32,
    wrap_v: u32,
    wrap_w: u32,
    compare: u32,
    aniso: u32,
    border: u32,
    flags: u32,
    reserved: u32,
};

pub const R4AmdImageDescriptors = extern struct {
    version: u32,
    size: u32,
    texture0: u32,
    texture1: u32,
    texture2: u32,
    texture3: u32,
    texture4: u32,
    texture5: u32,
    texture6: u32,
    texture7: u32,
    sampler0: u32,
    sampler1: u32,
    sampler2: u32,
    sampler3: u32,
    color0: u32,
    color1: u32,
    color2: u32,
    color3: u32,
    color4: u32,
    color5: u32,
    color6: u32,
    color7: u32,
    color8: u32,
    color9: u32,
    color10: u32,
    color11: u32,
    color12: u32,
    color13: u32,
    color14: u32,
    color15: u32,
};

pub const R4AmdArchitecture = extern struct {
    version: u32,
    size: u32,
    vendor_id: u32,
    device_id: u32,
    gc_version: u32,
    sdma_version: u32,
    gb_addr_config: u32,
    chip_revision: u32,
    bind_alignment: u64,
    memory_generation: u64,
    flags: u32,
    reserved: u32,
    max_image_bytes: u64,
};
pub const info_version: u32 = 1;
pub const status_ok: i32 = 0;
pub const profile_version: u32 = 1;
pub const command_abi: u32 = 1;
pub const vendor_id: u32 = 4098;
pub const gc_9_1_0: u32 = 590080;
pub const sdma_4_1_0: u32 = 262400;
pub const feature_copy_linear: u32 = 1;
pub const feature_copy_rows: u32 = 2;
pub const feature_copy_layout: u32 = 4;
pub const feature_fill: u32 = 8;
pub const feature_pm4: u32 = 16;
pub const image_workspace_bytes: u32 = 65536;
pub const image_max_mips: u32 = 15;
pub const image_usage_texture: u32 = 1;
pub const image_usage_color: u32 = 2;
pub const image_usage_storage: u32 = 4;
pub const image_usage_scanout: u32 = 8;
pub const image_usage_depth: u32 = 16;
pub const image_flag_scanout: u32 = 1;
pub const image_flag_tiled: u32 = 2;
pub const status_invalid: i32 = -1;
pub const status_unsupported: i32 = -2;
pub const status_stale: i32 = -3;
pub const status_oom: i32 = -4;
pub const status_limit: i32 = -5;

pub const info_v1_export_name = "INFO_V1";
pub const info_v1_revision: u16 = 1;
pub const info_v1_header = InterfaceHeader{
    .magic = r4os.runtime_r4l.interface_magic,
    .header_version = r4os.runtime_r4l.interface_header_version,
    .flags = 0,
    .size = 40,
    .abi_major = 1,
    .abi_minor = 1,
    .interface_id_lo = 0x414d4431,
    .interface_id_hi = 0x52344f53,
};
pub const InfoV1GetInfoFn = *const fn (output: *R4AmdInfo, output_bytes: u32) callconv(.c) i32;
pub const InfoV1 = extern struct {
    header: InterfaceHeader,
    get_info: InfoV1GetInfoFn,
};

pub const backend_v1_export_name = "BACKEND_V1";
pub const backend_v1_revision: u16 = 3;
pub const backend_v1_header = InterfaceHeader{
    .magic = r4os.runtime_r4l.interface_magic,
    .header_version = r4os.runtime_r4l.interface_header_version,
    .flags = 0,
    .size = 64,
    .abi_major = 1,
    .abi_minor = 3,
    .interface_id_lo = 0x414d4432,
    .interface_id_hi = 0x52344f53,
};
pub const BackendV1NegotiateFn = *const fn (profile: *const R4AmdDeviceProfile, output: *R4AmdFeatures) callconv(.c) i32;
pub const BackendV1EncodeCopyFn = *const fn (request: *const R4AmdCopy, commands: [*]u32, capacity: u32, written: *u32) callconv(.c) i32;
pub const BackendV1EncodeFillFn = *const fn (request: *const R4AmdFill, commands: [*]u32, capacity: u32, written: *u32) callconv(.c) i32;
pub const BackendV1EncodePm4FrameFn = *const fn (request: *const R4AmdPm4Frame, commands: [*]u32, capacity: u32, written: *u32) callconv(.c) i32;
pub const BackendV1 = extern struct {
    header: InterfaceHeader,
    negotiate: BackendV1NegotiateFn,
    encode_copy: BackendV1EncodeCopyFn,
    encode_fill: BackendV1EncodeFillFn,
    encode_pm4_frame: BackendV1EncodePm4FrameFn,
};

pub const image_v1_export_name = "IMAGE_V1";
pub const image_v1_revision: u16 = 1;
pub const image_v1_header = InterfaceHeader{
    .magic = r4os.runtime_r4l.interface_magic,
    .header_version = r4os.runtime_r4l.interface_header_version,
    .flags = 0,
    .size = 72,
    .abi_major = 1,
    .abi_minor = 1,
    .interface_id_lo = 0x414d4433,
    .interface_id_hi = 0x52344f53,
};
pub const ImageV1CalculateFn = *const fn (request: *const R4AmdImageRequest, workspace: [*]u8, workspace_bytes: u32, output: *R4AmdImageLayout, mips: [*]R4AmdMip, mip_capacity: u32) callconv(.c) i32;
pub const ImageV1AddressFn = *const fn (request: *const R4AmdImageRequest, coordinate: *const R4AmdCoordinate, workspace: [*]u8, workspace_bytes: u32, output: *R4AmdImageAddress) callconv(.c) i32;
pub const ImageV1MetadataFn = *const fn (request: *const R4AmdImageRequest, workspace: [*]u8, workspace_bytes: u32, output: *R4AmdMetadata) callconv(.c) i32;
pub const ImageV1ImportImageFn = *const fn (request: *const R4AmdImageRequest, imported: *const R4AmdImageImport, workspace: [*]u8, workspace_bytes: u32, output: *R4AmdImageLayout, mips: [*]R4AmdMip, mip_capacity: u32) callconv(.c) i32;
pub const ImageV1DescriptorsFn = *const fn (request: *const R4AmdImageRequest, view: *const R4AmdImageView, workspace: [*]u8, workspace_bytes: u32, output: *R4AmdImageDescriptors) callconv(.c) i32;
pub const ImageV1 = extern struct {
    header: InterfaceHeader,
    calculate: ImageV1CalculateFn,
    address: ImageV1AddressFn,
    metadata: ImageV1MetadataFn,
    import_image: ImageV1ImportImageFn,
    descriptors: ImageV1DescriptorsFn,
};
